<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="100dp"
            android:id="@+id/nome"
            android:text="@string/milk"
            android:textSize="30dp"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="58dp"
            android:text="@string/prezzomilk"
            android:id="@+id/prezzomilk"
            android:textSize="30dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/piu_btn1"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:text="@string/piu" />

            <TextView
                android:id="@+id/display_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uno" />

            <Button
                android:id="@+id/meno_btn1"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:text="@string/meno" />
        </LinearLayout>

    </LinearLayout>





