<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="5dp"
    android:orientation="vertical"
    >

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textWebEmailAddress"
        android:layout_margin="5dp"
        android:id="@+id/email_et"
        android:hint="@string/email"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="wrap_content"
        android:inputType="textWebPassword"
        android:hint="@string/password"
        android:id="@+id/password_et"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/phone"
        android:id="@+id/phone_et"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="bottom">


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_btn"
            android:enabled="false"
            android:text="@string/registrati"/>
    </LinearLayout>



</LinearLayout>